[project]
name = "etl-plugins"
dynamic = ["version"]
description = "Backend-agnostic, orchestrator-agnostic Python ETL plugin library."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "duarl", email = "duarltmd@gmail.com" }]
keywords = ["etl", "data-pipeline", "connectors", "plugins"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "typer>=0.12",
    "tenacity>=8.2",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

# 커넥터별 드라이버는 extras로 분리. 사용자는 필요한 것만 설치.
[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
mysql = ["pymysql>=1.1"]
s3 = ["boto3>=1.34", "pyarrow>=16.0"]
kafka = ["aiokafka>=0.11"]
airflow = ["apache-airflow>=2.10"]
dagster = ["dagster>=1.9"]
prefect = ["prefect>=3.0"]
observability = []  # ["opentelemetry-sdk>=1.25", "opentelemetry-exporter-otlp>=1.25"] — Step 6

# CLI entry point (Step 3에서 구현)
[project.scripts]
etlx = "etl_plugins.cli:app"

# 내장 커넥터 entry-point. 외부 패키지도 동일 그룹에 등록하면 자동 발견됨.
[project.entry-points."etl_plugins.connectors"]
postgres = "etl_plugins.connectors.rdbms.postgres:PostgresConnector"
mysql = "etl_plugins.connectors.rdbms.mysql:MySQLConnector"
s3 = "etl_plugins.connectors.object_storage.s3:S3Connector"
kafka = "etl_plugins.connectors.stream.kafka:KafkaConnector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "etl_plugins/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["etl_plugins"]

# === uv (PEP 735 dependency-groups) ===
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "detect-secrets>=1.5",
    "yamllint>=1.35",
    "testcontainers[postgres,minio,kafka,mysql]>=4.7",
    "types-PyYAML>=6.0",
    # 통합 테스트에서 사용 (CI 통합 테스트 잡이 자동 실행)
    "psycopg[binary]>=3.1",
    "pymysql>=1.1",
    "boto3>=1.34",
    "pyarrow>=16.0",
    "aiokafka>=0.11",
]

# === ruff: lint + format ===
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docker/", "configs/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length — formatter가 처리
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]  # 테스트 함수명은 자유롭게
# Adapter modules publish symbols via __getattr__ (lazy loading); ruff can't see them.
"etl_plugins/adapters/airflow.py" = ["F822"]
"etl_plugins/adapters/dagster.py" = ["F822"]
"etl_plugins/adapters/prefect.py" = ["F822"]

# === mypy: strict typing ===
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiokafka", "aiokafka.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pymysql", "pymysql.*"]
ignore_missing_imports = true

# Optional orchestrator extras — only installed via [project.optional-dependencies].
[[tool.mypy.overrides]]
module = ["airflow", "airflow.*", "dagster", "dagster.*", "prefect", "prefect.*"]
ignore_missing_imports = true

# Adapters use heavy decorators (Airflow BaseOperator, Dagster @op, Prefect @flow)
# whose type annotations aren't strict-friendly. We type-check the contracts that
# delegate to the runtime layer via the unit tests.
[[tool.mypy.overrides]]
module = ["etl_plugins.adapters.airflow", "etl_plugins.adapters.dagster", "etl_plugins.adapters.prefect"]
disallow_untyped_decorators = false
warn_unused_ignores = false

# === pytest ===
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "it: integration tests (require docker / testcontainers)",
    "slow: marks tests as slow",
]
asyncio_mode = "auto"

# === coverage ===
[tool.coverage.run]
source = ["etl_plugins"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
