[project]
name = "etl-plugins"
dynamic = ["version"]
description = "Backend-agnostic, orchestrator-agnostic Python ETL plugin library."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "duarl", email = "duarltmd@gmail.com" }]
keywords = ["etl", "data-pipeline", "connectors", "plugins"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "typer>=0.12",
    "tenacity>=8.2",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    # httpx is small + pure Python; used by both the FastAPI TestClient (dev
    # dep) and the http connector (production dep). Promoting it here keeps
    # the http connector zero-extras to install.
    "httpx>=0.27",
    # sqlglot is a pure-Python SQL parser/transpiler with a built-in column
    # lineage utility — used by ``runtime.column_lineage`` to trace output
    # columns back to source columns for warehouse-to-warehouse SQL pipelines
    # (ADR-0041 Phase J). Adds ~3MB; no compiled deps.
    "sqlglot>=25.0",
]

# 커넥터별 드라이버는 extras로 분리. 사용자는 필요한 것만 설치.
[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
mysql = ["pymysql>=1.1"]
# Phase AAQ (2026-05-29) — Vertica + MSSQL connectors. Both are pure
# Python clients so no system-level driver hunt for the user.
vertica = ["vertica-python>=1.4"]
mssql = ["pymssql>=2.3"]
snowflake = ["snowflake-connector-python>=3.0"]
bigquery = ["google-cloud-bigquery>=3.0"]
redshift = ["redshift-connector>=2.0"]
clickhouse = ["clickhouse-connect>=0.7"]
mongodb = ["pymongo>=4.6"]
dynamodb = ["boto3>=1.34"]
cassandra = ["cassandra-driver>=3.29"]
redis = ["redis>=5.0"]
s3 = ["boto3>=1.34", "pyarrow>=16.0"]
kafka = ["aiokafka>=0.11"]
kinesis = ["boto3>=1.34"]
sqs = ["boto3>=1.34"]
rabbitmq = ["aio-pika>=9.0"]
nats = ["nats-py>=2.6"]
airflow = ["apache-airflow>=2.10"]
dagster = ["dagster>=1.9"]
prefect = ["prefect>=3.0"]
observability = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    # Prometheus exporter (Step 6.2) — opt-in pull-model scrape endpoint.
    # Tracked together with OTel SDK since it plugs into the same
    # MeterProvider as a third MetricReader option (in addition to OTLP
    # and InMemory). The exporter package depends on prometheus_client.
    "opentelemetry-exporter-prometheus>=0.46b0",
]
# Secret backends (Step 7.4). Each backend is opt-in to avoid bringing heavy
# cloud SDKs into the default install. Users only install what they use.
vault = ["hvac>=2.0"]
aws-sm = ["boto3>=1.34"]
gcp-sm = ["google-cloud-secret-manager>=2.20"]

# CLI entry point (Step 3에서 구현)
[project.scripts]
etlx = "etl_plugins.cli:app"

# 내장 커넥터 entry-point. 외부 패키지도 동일 그룹에 등록하면 자동 발견됨.
[project.entry-points."etl_plugins.connectors"]
postgres = "etl_plugins.connectors.rdbms.postgres:PostgresConnector"
mysql = "etl_plugins.connectors.rdbms.mysql:MySQLConnector"
sqlite = "etl_plugins.connectors.rdbms.sqlite:SQLiteConnector"
vertica = "etl_plugins.connectors.rdbms.vertica:VerticaConnector"
mssql = "etl_plugins.connectors.rdbms.mssql:MSSQLConnector"
snowflake = "etl_plugins.connectors.rdbms.snowflake:SnowflakeConnector"
bigquery = "etl_plugins.connectors.rdbms.bigquery:BigQueryConnector"
redshift = "etl_plugins.connectors.rdbms.redshift:RedshiftConnector"
clickhouse = "etl_plugins.connectors.rdbms.clickhouse:ClickHouseConnector"
mongodb = "etl_plugins.connectors.nosql.mongodb:MongoDBConnector"
dynamodb = "etl_plugins.connectors.nosql.dynamodb:DynamoDBConnector"
cassandra = "etl_plugins.connectors.nosql.cassandra:CassandraConnector"
redis = "etl_plugins.connectors.nosql.redis:RedisConnector"
s3 = "etl_plugins.connectors.object_storage.s3:S3Connector"
kafka = "etl_plugins.connectors.stream.kafka:KafkaConnector"
kinesis = "etl_plugins.connectors.stream.kinesis:KinesisConnector"
sqs = "etl_plugins.connectors.stream.sqs:SQSConnector"
rabbitmq = "etl_plugins.connectors.stream.rabbitmq:RabbitMQConnector"
nats = "etl_plugins.connectors.stream.nats:NatsConnector"
http = "etl_plugins.connectors.http.connector:HttpConnector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "etl_plugins/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["etl_plugins"]

# === uv workspace (ADR-0022) ===
# Service packages live under `services/` with their own pyproject.toml and
# resolve `etl-plugins` (this package) via the workspace mechanism.
[tool.uv.workspace]
members = ["services/etlx-server"]

# === uv (PEP 735 dependency-groups) ===
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "detect-secrets>=1.5",
    "yamllint>=1.35",
    "testcontainers[postgres,minio,kafka,mysql,mongodb,vault,localstack]>=4.7",
    "types-PyYAML>=6.0",
    "import-linter>=2.0",       # ADR-0022 단방향 의존 자동 검증
    # Docs site (Step 6.4). mkdocs-material is the renderer; mkdocstrings
    # pulls docstrings into a generated API reference.
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    # 통합 테스트에서 사용 (CI 통합 테스트 잡이 자동 실행)
    "psycopg[binary]>=3.1",
    "pymysql>=1.1",
    "pymongo>=4.6",
    "boto3>=1.34",
    "pyarrow>=16.0",
    "aiokafka>=0.11",
    # Phase AAQ (2026-05-29) — Vertica + MSSQL drivers. Kept in the
    # dev group so ``uv sync`` (no extras) installs them automatically
    # for local dev / contract tests. End users still opt in via the
    # ``[vertica]`` / ``[mssql]`` extras for production installs.
    "vertica-python>=1.4",
    "pymssql>=2.3",
    # Secret backend clients (Step 7.4) — needed for unit mocks + integration tests
    "hvac>=2.0",
    "google-cloud-secret-manager>=2.20",
    # OTel SDK + OTLP exporter — tests configure_otel via InMemory readers,
    # so the dev install needs both the SDK and the gRPC exporter.
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    # Prometheus exporter (Step 6.2). Mirrors the [observability] extra so
    # `uv run pytest` can exercise the prometheus_port path.
    "opentelemetry-exporter-prometheus>=0.46b0",
    # services/etlx-server 테스트용 (workspace 통합 dev)
    "httpx>=0.27",              # FastAPI TestClient
]

# === ruff: lint + format ===
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docker/", "configs/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length — formatter가 처리
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]  # 테스트 함수명은 자유롭게
# Adapter modules publish symbols via __getattr__ (lazy loading); ruff can't see them.
"etl_plugins/adapters/airflow.py" = ["F822"]
"etl_plugins/adapters/dagster.py" = ["F822"]
"etl_plugins/adapters/prefect.py" = ["F822"]

# === mypy: strict typing ===
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

# sqlglot is a core dep (column lineage, ADR-0041 J1) but pre-commit's isolated
# mypy venv doesn't install it. Silence the missing-stub error there; runtime
# mypy on a synced uv env sees the real package.
[[tool.mypy.overrides]]
module = ["sqlglot", "sqlglot.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiokafka", "aiokafka.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pymysql", "pymysql.*"]
ignore_missing_imports = true

# psycopg is installed via [postgres] extra; pre-commit's isolated mypy
# venv doesn't get it, so silence the missing-stub error there.
[[tool.mypy.overrides]]
module = ["psycopg", "psycopg.*"]
ignore_missing_imports = true

# pymongo ships type stubs as of 4.6, but the lazy-imported path in our
# optional-extra connector module means mypy can still flag it when the
# extra isn't installed in the hook's venv. We rely on pyproject's
# [project.optional-dependencies] mongodb = ["pymongo>=4.6"] for users.
[[tool.mypy.overrides]]
module = ["pymongo", "pymongo.*", "bson", "bson.*"]
ignore_missing_imports = true

# OpenTelemetry — installed via [observability] extra. The SDK is lazy-imported
# from etl_plugins.observability.otel so the core install stays free of it.
[[tool.mypy.overrides]]
module = ["opentelemetry", "opentelemetry.*"]
ignore_missing_imports = true

# snowflake-connector-python — installed via [snowflake] extra only (ADR-0077).
# Lazy-imported in etl_plugins.connectors.rdbms.snowflake; not a dev dep (heavy),
# so silence the missing-stub error here. Runtime installs get it via the extra.
[[tool.mypy.overrides]]
module = ["snowflake", "snowflake.*"]
ignore_missing_imports = true

# google-cloud-bigquery — installed via [bigquery] extra only (ADR-0078).
# Lazy-imported in etl_plugins.connectors.rdbms.bigquery; not a dev dep.
[[tool.mypy.overrides]]
module = ["google.cloud", "google.cloud.*", "google.oauth2", "google.oauth2.*"]
ignore_missing_imports = true

# redshift_connector — installed via [redshift] extra only (ADR-0079).
# Lazy-imported in etl_plugins.connectors.rdbms.redshift; not a dev dep.
[[tool.mypy.overrides]]
module = ["redshift_connector", "redshift_connector.*"]
ignore_missing_imports = true

# clickhouse-connect — installed via [clickhouse] extra only (ADR-0080).
# Lazy-imported in etl_plugins.connectors.rdbms.clickhouse; not a dev dep.
[[tool.mypy.overrides]]
module = ["clickhouse_connect", "clickhouse_connect.*"]
ignore_missing_imports = true

# cassandra-driver — installed via [cassandra] extra only (ADR-0082).
# Lazy-imported in etl_plugins.connectors.nosql.cassandra; not a dev dep
# (C-extension, heavy). The driver's top-level package is ``cassandra``.
[[tool.mypy.overrides]]
module = ["cassandra", "cassandra.*"]
ignore_missing_imports = true

# redis-py — installed via [redis] extra only (ADR-0085).
# Lazy-imported in etl_plugins.connectors.nosql.redis; not a dev dep.
[[tool.mypy.overrides]]
module = ["redis", "redis.*"]
ignore_missing_imports = true

# aio-pika — installed via [rabbitmq] extra only (ADR-0086).
# Lazy-imported in etl_plugins.connectors.stream.rabbitmq; not a dev dep.
[[tool.mypy.overrides]]
module = ["aio_pika", "aio_pika.*"]
ignore_missing_imports = true

# nats-py — installed via [nats] extra only (ADR-0087).
# Lazy-imported in etl_plugins.connectors.stream.nats; not a dev dep.
[[tool.mypy.overrides]]
module = ["nats", "nats.*"]
ignore_missing_imports = true

# prometheus_client — pulled in transitively via opentelemetry-exporter-prometheus
# (Step 6.2). Lazy-imported in configure_otel so core install is unaffected.
[[tool.mypy.overrides]]
module = ["prometheus_client", "prometheus_client.*"]
ignore_missing_imports = true

# passlib doesn't ship type stubs in a way our pinned mypy picks up.
[[tool.mypy.overrides]]
module = ["passlib", "passlib.*"]
ignore_missing_imports = true

# Secret backend optional extras (Step 7.4) — typed stubs aren't published or
# are gRPC-generated and don't expose useful types for our usage.
[[tool.mypy.overrides]]
module = [
    "hvac", "hvac.*",
    "google", "google.*",
    "google.cloud", "google.cloud.secretmanager", "google.cloud.secretmanager.*",
    "google.api_core", "google.api_core.*",
]
ignore_missing_imports = true

# Optional orchestrator extras — only installed via [project.optional-dependencies].
[[tool.mypy.overrides]]
module = ["airflow", "airflow.*", "dagster", "dagster.*", "prefect", "prefect.*"]
ignore_missing_imports = true

# Adapters use heavy decorators (Airflow BaseOperator, Dagster @op, Prefect @flow)
# whose type annotations aren't strict-friendly. We type-check the contracts that
# delegate to the runtime layer via the unit tests.
[[tool.mypy.overrides]]
module = ["etl_plugins.adapters.airflow", "etl_plugins.adapters.dagster", "etl_plugins.adapters.prefect"]
disallow_untyped_decorators = false
warn_unused_ignores = false

# === pytest ===
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "it: integration tests (require docker / testcontainers)",
    "slow: marks tests as slow",
]
asyncio_mode = "auto"
# Session-scoped async fixtures (e.g. testcontainers engine) require a
# session-scoped event loop. Defaulting both fixture and test loop scope to
# "session" lets the integration tests share the one Postgres container's
# connection pool across the whole run.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

# === coverage ===
[tool.coverage.run]
source = ["etl_plugins"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
